--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 			<div class="container center" style="color: #9635ad;">We request the pleasure of your company to celebrate the Tilak Ceremony</div>
 			<div class="date" style="color: #e3004d;">at Agrasen Bhavan, Pali road</div>
 			<div class="date" style="color: #e3004d;">Dehri-On-Sone </div>
-			<iframe style="width: 100%; height: 400px; margin-top: 30px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3489.2455785098673!2d77.03759161504499!3d29.009718682270613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390db108f430b03b%3A0xcede8f1c2ac0f4f2!2sShubham+Gardens!5e0!3m2!1sen!2sin!4v1547442988126" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<iframe style="width: 100%; height: 400px; margin-top: 30px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.8983943981543!2d84.18560221483907!3d24.90144718403462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398da94cfb6bfeef%3A0x3eea14a14b172652!2sAgrasen+Bhavan!5e0!3m2!1sen!2sin!4v1557343285119!5m2!1sen!2sin" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 		
 		<div class="ceremony-section">
 			<h1 class="title" style="margin-top: 0; padding-top: 50px;">Wedding Day</h1>
 			<div class="container center" style="color: #9635ad;">Your love and blessing have helped us become who we are.</div>
 			<div class="container center" style="color: #e3004d;">Together with our parents, we invite you to share our joy as we exchange vows and celebrate our marriage.</div>
-			<iframe style="width: 100%; height: 400px; margin-top: 30px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3489.2455785098673!2d77.03759161504499!3d29.009718682270613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390db108f430b03b%3A0xcede8f1c2ac0f4f2!2sShubham+Gardens!5e0!3m2!1sen!2sin!4v1547442988126" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<iframe style="width: 100%; height: 400px; margin-top: 30px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.800289855628!2d85.05281926485426!3d25.611551683705144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ed56457da68f05%3A0x4fe92d36f6e28681!2sMagadh+Vilas+Banquet+Hall!5e0!3m2!1sen!2sin!4v1557343367013!5m2!1sen!2sin" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 		
 		<div id="thanks">Thank You</div>
