--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<div class="menu-box">
 			<div id="home">Home</div>
 			<div id="about">About</div>
-			<div id="gallery">Gallery</div>
-			<div id="ceremony">Ceremony</div>	
+			<div id="gallery">Tilak Ceremony</div>
+			<div id="ceremony">Wedding Ceremony</div>	
 		</div>
 		<div class="mobile-menu-box">
 			<div id="menu-heading" class="menu-btn" id="mobile-home">Home</div>
