--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				$('html, body').animate({scrollTop: $aboutTop}, 700);
 			});
 			$('#gallery,#gallery-m').click(function() {
-				$('html, body').animate({scrollTop: $aboutTop}, 700);
+				$('html, body').animate({scrollTop: $galleryTop}, 700);
 			});
 			
 			$('#ceremony, #ceremony-m').click(function() {
