--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<div id="menu-heading" class="menu-btn" id="mobile-home">Home</div>
 			<div id="home-m" class="menu-btn" id="mobile-home">Home</div>
 			<div id="about-m" class="menu-btn" id="mobile-about">About</div>
-			<div id="gallery-m" class="menu-btn" id="mobile-gallery">Gallery</div>
-			<div id="ceremony-m" class="menu-btn" id="mobile-ceremony">Ceremony</div>	
+			<div id="gallery-m" class="menu-btn" id="mobile-gallery">Tilak Ceremony</div>
+			<div id="ceremony-m" class="menu-btn" id="mobile-ceremony">Wedding Ceremony</div>	
 			 
 		</div>
 		
