--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 
 	<body>
-		<div style="width: 100%; height: 100%; background-image: url('bg.jpg'); background-position: center;">
+		<div style="width: 100%; height: 100%; background-image: url('bg.jpg'); background-position: top;">
 			<div class="title">Atul Weds Anushka</div>
 			<div class="date">Thursday 23 May 2019, 7PM</div>
 			<div class="date" style="color: #841010; font-weight: 700; font-size: 25px; line-height: 30px;">Magadh Vilas, Danapur, Patna</div>
