--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 		
 		<div class="tilak-section" style="background-image: url('bg-x.jpg'); background-position: bottom center;">
 			<h1 class="title" style="margin-top: 0; padding-top: 50px;">Tilak Ceremony</h1>
-			<div class="container center" style="color: #9635ad;">We request the pleasure of your company to celebrate the Tilak Ceremony</div>
-			<div class="date" style="color: #e3004d;">at Agrasen Bhavan, Pali road</div>
-			<div class="date" style="color: #e3004d;">Dehri-On-Sone </div>
+			<div class="container center" style="color: #9635ad;font-family: 'Great Vibes', cursive;font-size: 35px;line-height: 40px;">We request the pleasure of your company to celebrate the Tilak Ceremony</div>
+			<div class="date" style="color: #e3004d;font-family: 'Great Vibes', cursive;font-size: 35px;line-height: 40px;">at Agrasen Bhavan, Pali road</div>
+			<div class="date" style="color: #e3004d;font-family: 'Great Vibes', cursive;font-size: 35px;line-height: 40px;">Dehri-On-Sone </div>
 			<iframe style="width: 100%; height: 400px; margin-top: 30px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.8983943981543!2d84.18560221483907!3d24.90144718403462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398da94cfb6bfeef%3A0x3eea14a14b172652!2sAgrasen+Bhavan!5e0!3m2!1sen!2sin!4v1557343285119!5m2!1sen!2sin" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 		
