--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</div>
 		</div>
 		
-		<div class="tilak-section" style="background-image: url('bg-x.jpg'); background-position: bottom center;">
+		<div class="tilak-section" style="background-image: url('bg-y.jpg'); background-position: bottom center;">
 			<h1 class="title" style="margin-top: 0; padding-top: 50px;">Tilak Ceremony</h1>
 			<div class="container center" style="color: #9635ad;font-family: 'Great Vibes', cursive;font-size: 35px;line-height: 40px;">We request the pleasure of your company to celebrate the Tilak Ceremony</div>
 			<div class="date" style="color: #e3004d;font-family: 'Great Vibes', cursive;font-size: 35px;line-height: 40px;">at Agrasen Bhavan, Pali road</div>
